Add testing.conf file to each Dropwizard service
This should now allow us to actually override test values, since Typesafe config doesn't really let you override list values.

--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -31,6 +31,9 @@ consentdb {
 }
 
 server {
+    requestLog {
+        appenders = []
+    }
   registerDefaultExceptionMappers = false
   applicationConnectors = [{
     type = http
