--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -188,6 +188,9 @@
             <testResource>
                 <directory>${project.basedir}/../src/main/resources</directory>
             </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
         </testResources>
         <plugins>
             <plugin>
