--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -3,14 +3,14 @@ dpc.aggregation {
   database {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
+    user = override-me
+    password = override-me
   }
 
   queuedb {
     url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
-    user = postgres
-    password = dpc-safe
+    user = override-me
+    password = override-me
   }
 
   bbclient.keyStore.location = "/bb.keystore"
