--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -3,20 +3,20 @@ dpc.api {
 
     database = {
         url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
-        user = postgres
-        password = dpc-safe
+        user = override-me
+        password = override-me
     }
 
     queuedb = {
         url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
-        user = postgres
-        password = dpc-safe
+        user = override-me
+        password = override-me
     }
 
     authdb = {
         url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_auth"
-        user = postgres
-        password = dpc-safe
+        user = override-me
+        password = override-me
     }
 
     server {
