DPC-765: Switch config to use environment variables

--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -3,16 +3,24 @@ dpc.aggregation {
   database {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
-    user = override-me
-    password = override-me
+    user = ${ATTRIBUTION_DB_USER}
+    password = ${ATTRIBUTION_DB_PASS}
   }
 
   queuedb {
     url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
-    user = override-me
-    password = override-me
+    user = ${QUEUE_DB_USER}
+    password = ${QUEUE_DB_PASS}
   }
 
-  bbclient.keyStore.location = "/bb.keystore"
+  bbclient {
+    serverBaseUrl = "${BB_SERVER_BASEURL}"
+
+    keyStore {
+      location = "{$BB_KEYSTORE_LOCATION}"
+      defaultPassword = "${BB_KEYSTORE_PASS}"
+    }
+  }
+
   exportPath = "/app/data"
 }
