--- a/dpc-aggregation/src/main/resources/prod-sbx.application.conf
+++ b/dpc-aggregation/src/main/resources/prod-sbx.application.conf
@@ -12,6 +12,14 @@ dpc.aggregation {
     password = dpc-safe
   }
 
-  bbclient.keyStore.location = "/bb.keystore"
+  bbclient {
+    serverBaseUrl = "${BB_SERVER_BASEURL}"
+
+    keyStore {
+      location = "{$BB_KEYSTORE_LOCATION}"
+      defaultPassword = "${BB_KEYSTORE_PASS}"
+    }
+  }
+
   exportPath = "/app/data"
 }
