--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -3,29 +3,27 @@ dpc.api {
 
     database = {
         url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
-        user = override-me
-        password = override-me
+        user = ${ATTRIBUTION_DB_USER}
+        password = ${ATTRIBUTION_DB_PASS}
     }
 
     queuedb = {
         url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
-        user = override-me
-        password = override-me
+        user = ${QUEUE_DB_USER}
+        password = ${QUEUE_DB_PASS}
     }
 
     authdb = {
         url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_auth"
-        user = override-me
-        password = override-me
+        user = ${AUTH_DB_USER}
+        password = ${AUTH_DB_PASS}
     }
 
     server {
         applicationContextPath = "/api"
     }
 
-    bbclient.keyStore.location = "/bb.keystore"
-
     attributionURL = "http://backend.dpc-dev.local:8080/v1/"
     exportPath = "/app/data"
-    keyPairLocation = "/bakery_keypair.json"
+    keyPairLocation = "{$BAKERY_KEYPAIR_LOCATION}"
 }
