--- a/dpc-attribution/src/main/resources/dev.application.conf
+++ b/dpc-attribution/src/main/resources/dev.application.conf
@@ -2,8 +2,8 @@ dpc.attribution {
   database = {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
-    user = override-me
-    password = override-me
+    user = ${ATTRIBUTION_DB_USER}
+    password = ${ATTRIBUTION_DB_PASS}
   }
 
   server {
