--- a/dpc-api/src/main/resources/prod-sbx.application.conf
+++ b/dpc-api/src/main/resources/prod-sbx.application.conf
@@ -8,25 +8,23 @@ dpc.api {
 
     database {
         url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_attribution"
-        user = postgres
-        password = dpc-safe
+        user = ${ATTRIBUTION_DB_USER}
+        password = ${ATTRIBUTION_DB_PASS}
     }
 
     authdb {
         url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_auth"
-        user = postgres
-        password = dpc-safe
+        user = ${AUTH_DB_USER}
+        password = ${AUTH_DB_PASS}
     }
 
     queuedb {
         url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_queue"
-        user = postgres
-        password = dpc-safe
+        user = ${QUEUE_DB_USER}
+        password = ${QUEUE_DB_PASS}
     }
-
-    bbclient.keyStore.location = "/bb.keystore"
 
     attributionURL = "http://backend.dpc-prod-sbx.local:8080/v1/"
     exportPath = "/app/data"
-    keyPairLocation = "/bakery_keypair.json"
+    keyPairLocation = "{$BAKERY_KEYPAIR_LOCATION}"
 }
