--- a/dpc-attribution/src/main/resources/test.application.conf
+++ b/dpc-attribution/src/main/resources/test.application.conf
@@ -2,8 +2,8 @@ dpc.attribution {
   database = {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
+    user = ${ATTRIBUTION_DB_USER}
+    password = ${ATTRIBUTION_DB_PASS}
   }
 
   server {
