DPC-765: Fix typo in environment variable

--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -25,5 +25,5 @@ dpc.api {
 
     attributionURL = "http://backend.dpc-dev.local:8080/v1/"
     exportPath = "/app/data"
-    keyPairLocation = "{$BAKERY_KEYPAIR_LOCATION}"
+    keyPairLocation = "${BAKERY_KEYPAIR_LOCATION}"
 }
