--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -27,5 +27,5 @@ dpc.api {
 
     attributionURL = "http://backend.dpc-test.local:8080/v1/"
     exportPath = "/app/data"
-    keyPairLocation = "{$BAKERY_KEYPAIR_LOCATION}"
+    keyPairLocation = "${BAKERY_KEYPAIR_LOCATION}"
 }
