DPC-765: Fix another env var typo

--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -17,7 +17,7 @@ dpc.aggregation {
     serverBaseUrl = "${BB_SERVER_BASEURL}"
 
     keyStore {
-      location = "{$BB_KEYSTORE_LOCATION}"
+      location = "${BB_KEYSTORE_LOCATION}"
       defaultPassword = "${BB_KEYSTORE_PASS}"
     }
   }
