DPC-765: Fix missing environment variable for prod-sbx environment

--- a/dpc-aggregation/src/main/resources/prod-sbx.application.conf
+++ b/dpc-aggregation/src/main/resources/prod-sbx.application.conf
@@ -2,14 +2,14 @@
 dpc.aggregation {
   database {
     url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
+    user = ${ATTRIBUTION_DB_USER}
+    password = ${ATTRIBUTION_DB_PASS}
   }
 
   queuedb {
     url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_queue"
-    user = postgres
-    password = dpc-safe
+    user = ${QUEUE_DB_USER}
+    password = ${QUEUE_DB_PASS}
   }
 
   bbclient {
