DPC-765: Fix using environment variables for configuration

--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -14,11 +14,11 @@ dpc.aggregation {
   }
 
   bbclient {
-    serverBaseUrl = "${BB_SERVER_BASEURL}"
+    serverBaseUrl = ${BB_SERVER_BASEURL}
 
     keyStore {
-      location = "${BB_KEYSTORE_LOCATION}"
-      defaultPassword = "${BB_KEYSTORE_PASS}"
+      location = ${BB_KEYSTORE_LOCATION}
+      defaultPassword = ${BB_KEYSTORE_PASS}
     }
   }
 
