Move metrics config from server.conf to modules' application.conf

--- a/dpc-api/src/main/resources/prod-sbx.application.conf
+++ b/dpc-api/src/main/resources/prod-sbx.application.conf
@@ -27,4 +27,12 @@ dpc.api {
     attributionURL = "http://backend.dpc-prod-sbx.local:8080/v1/"
     exportPath = "/app/data"
     keyPairLocation = ${BAKERY_KEYPAIR_LOCATION}
+
+    metrics {
+      frequency = 1 minute
+      reporters = [{
+        type = log
+        logger = metrics-api
+      }]
+    }
 }
