--- a/dpc-attribution/src/main/resources/prod-sbx.application.conf
+++ b/dpc-attribution/src/main/resources/prod-sbx.application.conf
@@ -12,4 +12,12 @@ dpc.attribution {
       port = 8080
     }]
   }
+
+  metrics {
+    frequency = 1 minute
+    reporters = [{
+      type = log
+      logger = metrics-attribution
+    }]
+  }
 }
