--- a/dpc-aggregation/src/main/resources/prod-sbx.application.conf
+++ b/dpc-aggregation/src/main/resources/prod-sbx.application.conf
@@ -22,4 +22,12 @@ dpc.aggregation {
   }
 
   exportPath = "/app/data"
+
+  metrics {
+    frequency = 1 minute
+    reporters = [{
+      type = log
+      logger = metrics-aggregation
+    }]
+  }
 }
