Moved bundler audit into the Docker build process.
This avoids having to pull in git as a dependency in the production docker container, as well as surfaces security warnings earlier in the CI process.

--- a/dpc-web/Dockerfile
+++ b/dpc-web/Dockerfile
@@ -27,6 +27,9 @@ COPY /dpc-web/package.json /dpc-web/package-lock.json /dpc-web/
 # Install the website dependencies
 RUN gem install bundler --no-document && bundle install && npm install
 
+# Run bundler audit
+RUN bundle exec bundle audit update && bundle exec bundle audit check --ignore CVE-2015-9284
+
 # Copy the code, test the app, and build the assets pipeline
 COPY /dpc-web /dpc-web
 COPY --from=java_builder /dpc-app/dpc-web/public/ig /dpc-web/public/ig
