--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -144,6 +144,10 @@
             <artifactId>caffeine</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
         <!--Test resources-->
         <dependency>
             <groupId>io.dropwizard</groupId>
