--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,11 @@
                 <artifactId>dropwizard-sundial</artifactId>
                 <version>1.3.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>28.1-jre</version>
+            </dependency>
             <!--Test dependencies-->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
