--- a/dpc-testing/pom.xml
+++ b/dpc-testing/pom.xml
@@ -46,6 +46,13 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-testing</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-common</artifactId>
+            <version>2.29.1</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.knowm</groupId>
