--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -32,8 +32,8 @@ dpc.api {
     fhir {
         validation {
             enabled = true
-            schemaValidation = true
-            schematronValidation = true
+            schemaValidation = false
+            schematronValidation = false
         }
     }
 
