--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,8 @@
         <jooq.version>3.12.1</jooq.version>
         <bouncey.version>1.64</bouncey.version>
         <pitest.version>1.4.10</pitest.version>
+        <newrelic.agent.version>5.9.0</newrelic.agent.version>
+        <newrelic.agent.type>zip</newrelic.agent.type>
     </properties>
 
     <developers>
@@ -184,6 +186,13 @@
                 <groupId>org.knowm</groupId>
                 <artifactId>dropwizard-sundial</artifactId>
                 <version>1.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.newrelic.agent.java</groupId>
+                <artifactId>newrelic-java</artifactId>
+                <version>${newrelic.agent.version}</version>
+                <scope>provided</scope>
+                <type>${newrelic.agent.type}</type>
             </dependency>
             <!--Test dependencies-->
             <dependency>
@@ -411,6 +420,28 @@
                     <version>3.8.1</version>
                 </plugin>
                 <!-- Base configuration for Docker images -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.1.1</version>
+                    <executions>
+                        <execution>
+                            <id>unpack-newrelic</id>
+                            <phase>prepare-package</phase>
+                            <goals>
+                                <goal>unpack-dependencies</goal>
+                            </goals>
+                            <configuration>
+                                <includeGroupIds>com.newrelic.agent.java</includeGroupIds>
+                                <includeArtifactIds>newrelic-java</includeArtifactIds>
+                                <overWriteReleases>false</overWriteReleases>
+                                <overWriteSnapshots>false</overWriteSnapshots>
+                                <overWriteIfNewer>true</overWriteIfNewer>
+                                <outputDirectory>${project.build.directory}/newrelic-agent</outputDirectory>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
                 <plugin>
                     <groupId>com.google.cloud.tools</groupId>
                     <artifactId>jib-maven-plugin</artifactId>
