Add Mutation testing to dpc-macaroons module (#507)
* Improved testing of Macaroon module

Added some additional unit tests to help address mutation failures revealed with PI-Test.

* Add Maven site plugin.

--- a/dpc-macaroons/pom.xml
+++ b/dpc-macaroons/pom.xml
@@ -54,5 +54,28 @@
             <artifactId>curve25519-java</artifactId>
             <version>0.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.5.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>${pitest.version}</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
