--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -110,6 +110,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.newrelic.agent.java</groupId>
+            <artifactId>newrelic-java</artifactId>
+            <version>${newrelic.agent.version}</version>
+            <type>${newrelic.agent.type}</type>
+        </dependency>
     </dependencies>
 
     <build>
@@ -178,6 +184,10 @@
             </plugin>
             <!-- For building docker image -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
@@ -186,6 +196,7 @@
                             <path>${project.basedir}/../bbcerts</path>
                             <path>${project.basedir}/target/jacoco-agent</path>
                             <path>${project.basedir}/docker</path>
+                            <path>${project.basedir}/target/newrelic-agent</path>
                         </paths>
                         <permissions>
                             <permission>
