--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -74,6 +74,12 @@
             <groupId>com.smoketurner</groupId>
             <artifactId>dropwizard-swagger</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.newrelic.agent.java</groupId>
+            <artifactId>newrelic-java</artifactId>
+            <version>${newrelic.agent.version}</version>
+            <type>${newrelic.agent.type}</type>
+        </dependency>
         <!--Testing dependencies-->
         <dependency>
             <groupId>io.dropwizard</groupId>
@@ -168,6 +174,10 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
@@ -188,6 +198,7 @@
                         <paths>
                             <path>${project.basedir}/docker</path>
                             <path>${project.basedir}/target/jacoco-agent</path>
+                            <path>${project.basedir}/target/newrelic-agent</path>
                         </paths>
                         <permissions>
                             <permission>
