--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -1,5 +1,5 @@
 dpc.api {
-    publicURL = "https://dpc-dev-815423886.us-east-1.elb.amazonaws.com/api" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
+    publicURL = "https://dev.dpc.cms.gov/api" # The root URL at which the application is accessible, if necssary, include the port, do not include the application version
 
     database = {
         url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
