--- a/src/test/dev.smoke_test.yml
+++ b/src/test/dev.smoke_test.yml
@@ -1,6 +1,6 @@
 settings:
   env:
-    HOST: https://dpc-dev-815423886.us-east-1.elb.amazonaws.com/api/v1
+    HOST: https://dev.dpc.cms.gov/api/v1
     ADMIN_URL: **REMOVED**
     SEED_FILE: src/main/resources/test_associations.csv
     PROVIDER_BUNDLE: provider_bundle.json
