DPC-733: Updated consent configuration
Updated the config files to source the DB parameters from the environment variables, except when running locally.

Also unified some of the configs to avoid duplicated settings.

--- a/dpc-consent/src/main/resources/application.conf
+++ b/dpc-consent/src/main/resources/application.conf
@@ -1,6 +1,13 @@
 dpc.consent {
   include "server.conf"
 
+  database = {
+    driverClass = org.postgresql.Driver
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
+    user = ${CONSENT_DB_USER}
+    password = ${CONSENT_DB_PASS}
+  }
+
   swagger {
     title = "DPC Consent Service"
     resourcePackage = gov.cms.dpc.consent.resources
