--- a/dpc-consent/src/main/resources/prod-sbx.application.conf
+++ b/dpc-consent/src/main/resources/prod-sbx.application.conf
@@ -1,16 +1,7 @@
 dpc.consent {
-  consentdb {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_consent"
-    user = postgres
-    password = dpc-safe
-  }
 
   // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
-  fhirReferenceURL = "https://dpc.cms.gov/v1"
+  fhirReferenceURL = "https://sandbox.dpc.cms.gov/api/v1"
 
-  consentOrganizationURL = "https://dpc.cms.gov"
-
-  // Disable FHIR validation
-  fhir.validation.enabled = false
+  consentOrganizationURL = "https://sandbox.dpc.cms.gov"
 }
