DPC-733: Revert clever config unification.
I'm not as clever as I think, so we'll revert back to the verbose way, because the configs don't seem to be resolved correctly.

--- a/dpc-consent/src/main/resources/test.application.conf
+++ b/dpc-consent/src/main/resources/test.application.conf
@@ -1,5 +1,12 @@
 dpc.consent {
 
+    database = {
+        driverClass = org.postgresql.Driver
+        url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
+        user = ${CONSENT_DB_USER}
+        password = ${CONSENT_DB_PASS}
+    }
+
   // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
   fhirReferenceURL = "https://test.dpc.cms.gov/api/v1"
 
