--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -21,4 +21,13 @@ dpc.aggregation {
   retryCount = 3 // Number of times to retry reach BB request
   resourcesPerFile = 5000 // Max number of resources that a export file will have before creating a new file
   exportPath = "/tmp"
+
+  server.requestLog.appenders = [{
+    type = console
+    timeZone = UTC
+    layout {
+      type = access-json
+      timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
+    }
+  }]
 }
