--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -15,10 +15,15 @@ dpc.api {
     }
 
     server.requestLog.appenders = [{
-        type: "console"
+        type = console
+        timeZone = UTC
         filterFactories =[{
-            type: token-filter-factory
+            type = token-filter-factory
         }]
+        layout {
+          type = access-json
+          timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
+        }
     }]
 
     attributionURL = "http://localhost:3500/v1/"
