--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -80,6 +80,10 @@
             <version>${newrelic.agent.version}</version>
             <type>${newrelic.agent.type}</type>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-json-logging</artifactId>
+        </dependency>
         <!--Testing dependencies-->
         <dependency>
             <groupId>io.dropwizard</groupId>
