--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -13,6 +13,16 @@ dpc.attribution {
       "org.hibernate.SQL" = TRACE
     }
   }
+
+  server.requestLog.appenders = [{
+    type = console
+    timeZone = UTC
+    layout {
+      type = access-json
+      timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
+    }
+  }]
+
   publicServerURL = "https://dpc.cms.gov"
 
   tokens {
