--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
                 <version>${slf4j.version}</version>
             </dependency>
             <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-json-logging</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>${hapi.fhir.groupID}</groupId>
                 <artifactId>hapi-fhir-base</artifactId>
                 <version>${hapi.fhir.version}</version>
