--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -45,7 +45,11 @@ server {
 logging {
   appenders = [{
     type = console
-    logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %replace(%m - organization_id=%X{organization_id}\n){'\n','\r'}\r%replace(%rEx){'\n','\r'}"
+    timeZone = UTC
+    layout {
+      type = json
+      timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
+    }
   }]
 }
 
