--- a/dpc-consent/src/main/resources/dev.application.conf
+++ b/dpc-consent/src/main/resources/dev.application.conf
@@ -7,6 +7,13 @@ dpc.consent {
         password = ${CONSENT_DB_PASS}
     }
 
+    server {
+        applicationConnectors = [{
+            type = http
+            port = 3600
+        }]
+    }
+
   // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
   fhirReferenceURL = "https://dev.dpc.cms.gov/api/v1"
 
