DPC-733: Fix db configuration name
It helps to actually use the correct names for config options.

--- a/dpc-consent/src/main/resources/dev.application.conf
+++ b/dpc-consent/src/main/resources/dev.application.conf
@@ -1,8 +1,8 @@
 dpc.consent {
 
-    database = {
+    consentdb = {
         driverClass = org.postgresql.Driver
-        url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
+        url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_consent"
         user = ${CONSENT_DB_USER}
         password = ${CONSENT_DB_PASS}
     }
