--- a/dpc-consent/src/main/resources/local.application.conf
+++ b/dpc-consent/src/main/resources/local.application.conf
@@ -6,12 +6,15 @@ dpc.consent {
     password = dpc-safe
   }
 
+    server {
+        applicationConnectors = [{
+            type = http
+            port = 3600
+        }]
+    }
 
   // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
   fhirReferenceURL = "http://localhost:3200/api/v1"
 
   consentOrganizationURL = "https://localhost"
-
-  // Disable FHIR validation
-  fhir.validation.enabled = false
 }
