--- a/dpc-consent/src/main/resources/test.application.conf
+++ b/dpc-consent/src/main/resources/test.application.conf
@@ -1,16 +1,21 @@
 dpc.consent {
-  consentdb {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_consent"
-    user = postgres
-    password = dpc-safe
-  }
+
+    consentdb = {
+        driverClass = org.postgresql.Driver
+        url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_consent"
+        user = ${CONSENT_DB_USER}
+        password = ${CONSENT_DB_PASS}
+    }
+
+    server {
+        applicationConnectors = [{
+            type = http
+            port = 3600
+        }]
+    }
 
   // base URL for FHIR references to DPC resources (Patients, Organizations, etc) embedded in a Consent resource
-  fhirReferenceURL = "https://test.dpc.cms.gov/api"
+  fhirReferenceURL = "https://test.dpc.cms.gov/api/v1"
 
   consentOrganizationURL = "https://test.dpc.cms.gov"
-
-  // Disable FHIR validation
-  fhir.validation.enabled = false
 }
