--- a/dpc-consent/src/main/resources/application.conf
+++ b/dpc-consent/src/main/resources/application.conf
@@ -19,4 +19,13 @@ dpc.consent {
 
   // Disable FHIR validation
   fhir.validation.enabled = false
+
+  server.requestLog.appenders = [{
+    type = console
+    timeZone = UTC
+    layout {
+      type = access-json
+      timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
+    }
+  }]
 }
