--- a/dpc-consent/src/main/resources/prod-sbx.application.conf
+++ b/dpc-consent/src/main/resources/prod-sbx.application.conf
@@ -2,7 +2,7 @@ dpc.consent {
 
     consentdb = {
         driverClass = org.postgresql.Driver
-        url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_consent"
+        url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_consent"
         user = ${CONSENT_DB_USER}
         password = ${CONSENT_DB_PASS}
     }
