--- a/dpc-bluebutton/src/test/resources/test.application.conf
+++ b/dpc-bluebutton/src/test/resources/test.application.conf
@@ -13,6 +13,8 @@ bbclient {
 
   serverBaseUrl = "http://localhost:8083/v1/fhir/"
   resourcesCount = 10
+  bfdHashPepper=6E6F747468657265616C706570706572
+  bfdHashIter=1000
 }
 
 test {
