DPC-248: Enable distributed tracing
Update the newrelic.yml file to enable distributed tracing.

--- a/src/main/resources/newrelic.yml
+++ b/src/main/resources/newrelic.yml
@@ -43,7 +43,7 @@ common: &default_settings
     max_samples_stored: 2000
 
   distributed_tracing:
-    enabled: false
+    enabled: true
 
   cross_application_tracer:
     enabled: true
