DPC-248: Disable cross app tracing and enable trace logging
Try to make things more verbose, as well as disable cross application tracing

--- a/src/main/resources/newrelic.yml
+++ b/src/main/resources/newrelic.yml
@@ -46,7 +46,7 @@ common: &default_settings
     enabled: true
 
   cross_application_tracer:
-    enabled: true
+    enabled: false
 
   thread_profiler:
     enabled: true
