DPC-248: Enable distributed tracing for website.
Re-enable circuit breaker, but increase the GC limit to so that it doesn't die on us.

--- a/src/main/resources/newrelic.yml
+++ b/src/main/resources/newrelic.yml
@@ -10,7 +10,7 @@ common: &default_settings
   log_daily: false
   log_file_name: STDOUT
   circuit_breaker:
-    enabled: false
+    gc_cpu_threshold: 30
 
   # Limits the number of lines to capture for each stack trace.
   # Default is 30
