--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -120,6 +120,11 @@
             <version>${newrelic.agent.version}</version>
             <type>${newrelic.agent.type}</type>
         </dependency>
+        <dependency>
+            <groupId>com.newrelic.agent.java</groupId>
+            <artifactId>newrelic-api</artifactId>
+            <version>${newrelic.agent.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
