DPC-248: Enable distributed tracing (#556)
* DPC-248: Enable distributed tracing

Update the newrelic.yml file to enable distributed tracing.

* DPC-248: Disable cross app tracing and enable trace logging

Try to make things more verbose, as well as disable cross application tracing

* DPC-248: Debug logging only for http headers

* DPC-248: Temporarily disable circuit breakers.

* DPC-248: Enable distributed tracing for website.

Re-enable circuit breaker, but increase the GC limit to so that it doesn't die on us.

* DPC-248: Add manual trace transaction to aggregation service

Updated the aggregation engine to manually trace aggregation jobs.

Not sure which level of granularity we need right now, but this should be a good start.

* DPC-248: Remove debug logging of HTTP headers

In order to avoid leaking PII into the logs, I'm removing the debug header output. We may want to re-enable this in the future, in order to get some additional visibility into the intra-DPC service traffic.

--- a/src/main/resources/newrelic.yml
+++ b/src/main/resources/newrelic.yml
@@ -9,6 +9,8 @@ common: &default_settings
   log_limit_in_kbytes: 0
   log_daily: false
   log_file_name: STDOUT
+  circuit_breaker:
+    gc_cpu_threshold: 30
 
   # Limits the number of lines to capture for each stack trace.
   # Default is 30
@@ -43,10 +45,10 @@ common: &default_settings
     max_samples_stored: 2000
 
   distributed_tracing:
-    enabled: false
+    enabled: true
 
   cross_application_tracer:
-    enabled: true
+    enabled: false
 
   thread_profiler:
     enabled: true
