--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -51,8 +51,9 @@ logging {
       timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
     }
   }]
-  loggers = {
-    "liquibase" = WARN
+
+  loggers {
+    "liquibase" = INFO
   }
 }
 
