--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -50,6 +50,10 @@ logging {
       type = json
       timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
     }
+
+    # Prevent log entries from being dropped under all circumstances
+    # While nice from a performance standpoint, we must ensure full audit capability of the application
+    discardingThreshold = 0
   }]
 
   loggers {
