DPC-966: Reduce the amount of logs by using a standard log configuration file across services

--- a/src/main/resources/server-ci.conf
+++ b/src/main/resources/server-ci.conf
@@ -3,7 +3,7 @@ server.requestLog.appenders = []
 logging {
     level = ERROR
     loggers {
-        "liquibase" = WARN
-        "org.hibernate.SQL" = WARN
+        "liquibase" = ERROR
+        "org.hibernate.SQL" = ERROR
     }
 }
