before create, create vendor id for vendor organizations

--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -24,6 +24,7 @@ gem 'health_check'
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'pry'
+  gem 'pry-nav'
 
   gem 'rspec-rails'
   gem 'database_cleaner'
