create custom layout to parse json like strings for logging

--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -63,4 +63,13 @@ dpc.api {
     }
 
     keyPairLocation = "../src/main/resources/keypair/bakery_keypair.json"
+
+    logging.appenders = [{
+        type = console
+        layout {
+            type = json-dpc
+            timestampFormat = "yyyy-MM-dd'T'HH:mm:ss.SSSZ"
+        }
+    }]
+
 }
