--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -69,6 +69,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-json-logging</artifactId>
+        </dependency>
+        <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-validation</artifactId>
             <version>${hapi.fhir.version}</version>
